@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-11T16:25:42Z",
+  "timestamp" : "2022-07-12T01:40:03Z",
   "count_outdated" : 429,
   "uniques_outdated" : 152,
-  "count" : 650,
-  "uniques" : 228,
+  "count" : 651,
+  "uniques" : 229,
   "views" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
@@ -77,10 +77,10 @@
     },
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ]
     }
   ]
 }
