@@ -1,5 +1,5 @@
 {
-  "count": 221,
+  "count": 222,
   "uniques": 71,
   "views": [
     {
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
