@@ -1,3 +1,10 @@
+2022-07-12T01:40:03Z:
+* notice: last 14d: unq all: 71 222
+* notice: prev accum: outdated-unq outdated-all / unq all: 152 429 / 228 650
+* notice: next accum: outdated-unq outdated-all / unq all: 152 429 / 229 651
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +3 -0 -0 / 3 3
+* notice: removed / changed dates: [] / [2022-07-11]
+
 2022-07-11T16:25:42Z:
 * notice: last 14d: unq all: 71 221
 * notice: prev accum: outdated-unq outdated-all / unq all: 152 429 / 227 649
